[package]
name = "ina228-from-pico-2w"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "1.0.0" }
cortex-m = "0.7"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }